# sonos-conductor

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/sonos_conductor/: __init__.py  binary_sensor.py  config_flow.py  const.py  controller.py  discovery.py  event.py  icons.json  manifest.json  media_player.py  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/sonos_conductor/core/: __init__.py  audio.py  effects.py  engine.py  events.py  grouping.py  model.py  plan.py  reconcile.py  timers.py  volume_math.py  zones.py
custom_components/sonos_conductor/translations/: en.json  nb.json
docs/: ARCHITECTURE.md  ENGINE_SPEC.md  LEGACY_BEHAVIOR.md  MIGRATION.md
tests/: conftest.py  fake_engine.py  test_config_flow.py  test_controller.py  test_discovery.py  test_e2e.py  test_entities.py  test_setup.py
tests/core/: harness.py  test_engine_dock.py  test_engine_duck.py  test_engine_enable.py  test_engine_external.py  test_engine_floor.py  test_engine_follow.py  test_engine_group.py  test_engine_idle.py  test_engine_master_mute.py  test_engine_misc.py  test_engine_night.py  test_engine_presence.py  test_engine_races.py  test_engine_startup.py  test_engine_tv.py  test_engine_zones.py  test_purity.py  test_volume_math.py
